backapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw3-backapp
  labels:
    homework: backapp
    training: block3
spec:
  replicas: 1
  selector:
    matchLabels:
      homework: backapp
  template:
    metadata:
      labels:
        homework: backapp
        training: block3
    spec:
      containers:
        - name: backapp
          image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
          ports:
            - name: http-backapp
              containerPort: 8080
