backapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-backapp-svc
  labels:
    homework: backapp
    training: block3
spec:
  selector:
    homework: backapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: http-backapp
