frontapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-frontapp-svc
  labels:
    homework: frontapp
    training: block3
spec:
  selector:
    homework: frontapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-frontapp
